frontend/resources/sass/mixins/_mixins.scss
@mixin vertical-align($position: relative) {
	position: $position;
	top: 50%;
	transform: translateY(-50%);
}

%base-menu-style {
	position: relative;

	.drawer {
		display: none;

		.content {
			position: absolute;
			top: 0;
		}
	}

	.menu-container {
		column-gap: 3rem;
		display: flex;

		li {
			display: inline-block;

			.menu-image-title-before.menu-image-not-hovered {
				display: flex;
			}

			.menu-image-title-before.menu-image-title {
				padding: 0;
				display: flex;
			}

			&.menu-item {
				font-weight: 600;
				font-size: 0.875rem;

				img {
					width: 25px;
					padding: 0;
				}
			}

			&.small-sub-menu .sub-menu {
				max-width: 14rem;
				padding: 0.5rem;
				border-radius: 0.75rem;
			}
		}

		.sub-menu {
			transition: all 0.2s;
			transform: translateY(10px);
			opacity: 0;
			visibility: hidden;
			padding: 1rem;
			--tw-ring-color: rgb(17 24 39 / 0.05);
			--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
			--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
			box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 $black);
			--tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
			--tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
			--tw-bg-opacity: 1;
			background-color: rgb(255 255 255 / var(--tw-bg-opacity));
			overflow: hidden;
			width: 100vw;
			position: absolute;
			padding-bottom: 0;

			li {
				line-height: 24px;
				font-size: 0.875rem;
				padding: 1rem;
				display: block;
				border-radius: 0.5rem;
				column-gap: 1.5rem;
				align-items: center;
				position: relative;

				&:hover {
					--tw-bg-opacity: 1;
					background-color: rgb(249 250 251 / var(--tw-bg-opacity));
				}

				a {
					column-gap: 1.5rem;
					align-items: center;
					display: flex;
					position: relative;
				}

				.title {
					--tw-text-opacity: 1;
					color: rgb(17 24 39 / var(--tw-text-opacity));
					font-weight: 600;
					display: block;
				}

				.menu-item-description {
					--tw-text-opacity: 1;
					color: rgb(75 85 99 / var(--tw-text-opacity));
					margin-top: 0.25rem;
					display: block;
					font-weight: 400;
				}

				&.footer {
					padding: 0;

					&:hover {
						background-color: transparent;
					}

					> a {
						display: none;
					}

					.sub-menu {
						margin: auto;
						padding: 0;
						border-radius: 0;
						box-shadow: none;
						display: flex;
						justify-content: space-between;
						--tw-bg-opacity: 1;
						left: -16px;
						position: relative;
						padding-top: 1rem;

						li {
							width: 50%;
							--tw-divide-x-reverse: 0;
							border-right-width: calc(1px * var(--tw-divide-x-reverse));
							border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
							border-radius: 0;
							padding: 0;

							&:first-child {
								border-left: 0;
							}

							a {
								column-gap: 0.625rem;
								--tw-text-opacity: 1;
								color: rgb(17 24 39 / var(--tw-text-opacity));
								justify-content: center;
								align-items: center;
								line-height: 24px;
								font-weight: 600;
								font-size: 0.875rem;
								display: flex;
								padding: 0.75rem;
								background-color: rgb(249 250 251 / var(--tw-bg-opacity));

								&:hover {
									--tw-bg-opacity: 1;
									background-color: rgb(243 244 246 / var(--tw-bg-opacity));
								}
							}
						}
					}
				}
			}
		}

		.show-sub-menu {
			transform: translateY(0);
			display: block;
			opacity: 1;
			visibility: visible;
			z-index: 10;
		}
	}

	.mobile-menu-container {

		li {
			--tw-text-opacity: 1;
			color: rgb(17 24 39 / var(--tw-text-opacity));
			line-height: 28px;
			--tw-space-y-reverse: 0;
			margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
			margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));

			&:first-child {
				margin-top: 0;
			}

			.menu-image-title-before.menu-image-not-hovered {
				display: flex;
				justify-content: space-between;
			}

			.menu-image-title-before.menu-image-title,
			.menu-image-title-before.menu-image-not-hovered span {
				padding: 0;
			}

			a {
				padding-right: 0.875rem;
				padding-left: 0.75rem;
				padding-top: 0.5rem;
				padding-bottom: 0.5rem;
				border-radius: 0.5rem;
				font-weight: 600;
				font-size: 1rem;
				display: block;

				&:hover {
					--tw-bg-opacity: 1;
					background-color: rgb(249 250 251 / var(--tw-bg-opacity));
				}
			}

			> span {
				padding: 0;
			}

			.menu-image-title-before.menu-image-title {
				display: flex;
				justify-content: space-between;
			}

			.menu-image {
				width: 25px;
				padding: 0;
			}
		}

		.sub-menu {
			margin-top: 0.5rem;
			display: none;

			.menu-image {
				display: none;
			}

			.menu-item-description {
				display: none;
			}

			li {
				--tw-space-y-reverse: 0;
				margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
				margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));

				a {
					font-size: 0.875rem;
				}

				a:not(.menu-image-title-after) {
					padding-left: 22px;
				}

				&:first-child {
					margin-top: 0;
				}
			}
		}
	}

	@media screen and (max-width: 1023px) {

		.flow-root {
			margin-left: -0.75rem;
			margin-right: -0.75rem;
		}

		.mobile-menu-container .sub-menu li {

			&.footer > a {
				display: none !important;
			}
		}
	}

	@media screen and (max-width: 640px) {

		.mobile-menu-container li .menu-image-title-before.menu-image-title {
			padding: 0;
		}
	}
}

@mixin gl-menu-style($list-position: inherit, $sub-menu-max-width: 28rem) {

	@extend %base-menu-style;

	.menu-container {

		li {
			position: $list-position;
		}

		.sub-menu {
			border-radius: 1.5rem;
			max-width: $sub-menu-max-width;
			z-index: 10;
			top: 100%;
			left: -2rem;
			position: absolute;
			margin-top: 0.75rem;
		}
	}
}

@mixin gl-menu-full-width {

	@extend %base-menu-style;

	.menu-container {

		.sub-menu {
			display: flex;
			flex-wrap: wrap;
			padding-top: 3.5rem;
			left: 0;
			z-index: 1;
			max-width: 100%;
			border-radius: 0;
			column-gap: 2rem;
			box-shadow: 0 4px 2px -2px rgb(0 0 0 / 0.1);

			li {
				justify-content: space-between;
				flex-grow: 1;
				flex-basis: 0;

				&:last-child {
					flex-basis: 100%;
				}

				.title {
					margin-top: 1.5rem;
				}

				a {
					display: block;
				}

				&.footer .sub-menu {
					column-gap: 0;
					margin-top: 2.5rem;
					padding-top: 0;
					background-color: rgb(249 250 251/var(--tw-bg-opacity));

					li {
						flex-grow: 1;
						flex-basis: 0;

						.title {
							margin-top: 0;
						}
					}
				}
			}
		}
	}
}

@mixin header-on-background($bg-color: transparent, $drawer-bg: $white, $font-color: $white, $drawer-font-color: $dark-bg, $hover-color: $dark-hover) {
	background-color: $bg-color;

	li,
	a {
		color: $font-color;
	}

	.drawer .content {
		background-color: $drawer-bg;

		li,
		a {
			color: $drawer-font-color;
		}
	}

	.mobile-menu-container {

		li a:hover {
			background-color: $hover-color;
		}
	}

	@media screen and (max-width: 1023px) {

		a:hover {
			background-color: $hover-color;
		}
	}
}

@mixin mobile-menu-with-icons {

	.content {
		padding-bottom: 0;
	}

	li {
		margin-left: -0.75rem;
		margin-right: -0.75rem;

		&:first-child a {
			margin-top: 0;
		}

		a {
			padding: 0.75rem;
			--tw-space-y-reverse: 0;
			margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
			margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
			border-radius: 0.5rem;

			&:hover {
				--tw-bg-opacity: 1;
				background-color: rgb(249 250 251 / var(--tw-bg-opacity));
			}
		}

		&.separator::before {
			content: "";
			height: 1px;
			display: block;
			--tw-divide-y-reverse: 0;
			margin-top: 1.5rem;
			margin-bottom: 1.5rem;
			background-color: rgb(107 114 128 / 0.1);
		}

		&.menu-item.menu-item-type-custom {

			a {
				padding: 0.75rem;
				display: block;
				font-weight: 600;
			}
		}

		a.menu-image-title-after.menu-image-not-hovered {
			display: flex;
			align-items: center;
			column-gap: 1.5rem;
			font-weight: 600;

			.menu-image.menu-image-title-after {
				width: 24px;
				padding: 0;
			}

			.menu-image-title-after.menu-image-title {
				padding: 0;
			}
		}

		&.footer {
			position: sticky;
			bottom: 0;
			padding: 0;
			--tw-bg-opacity: 1;
			padding-top: 20px;

			> a {
				display: none !important;
			}

			.sub-menu {
				display: grid;
				grid-template-columns: repeat(2, minmax(0, 1fr));
				margin-left: -12px;
				margin-right: -12px;
				--tw-bg-opacity: 1;
				background-color: rgb(249 250 251/var(--tw-bg-opacity));

				li {
					padding: 0;
					margin: 0;
					border-color: rgb(17 24 39 / 0.05);
					--tw-divide-x-reverse: 0;
					border-right-width: calc(1px * var(--tw-divide-x-reverse));
					border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));

					&:first-child {
						border: 0;
					}

					a {
						display: block;
						padding: 0.75rem;
						text-align: center;
						margin: 0;

						&:hover {
							background-color: rgb(243 244 246 / var(--tw-bg-opacity));
						}
					}
				}
			}
		}
	}
}

@mixin footer-style {

	#footer-social-menu {
		display: flex;

		li {
			width: 24px;
			height: 24px;
			margin-left: 24px;

			&:first-child {
				margin-left: 0;
			}

			.menu-image-title-hide.menu-image-title {
				display: none;
			}

			img {
				filter: brightness(1.4);
			}

			&:hover img {
				filter: brightness(1);
			}
		}
	}

	.footer-menu {
		margin-top: 1.5rem;

		li {
			margin-top: 16px;

			&:first-child {
				margin-top: 0;
			}

			a {
				font-size: 0.875rem;
				color: $gray-600;

				&:hover {
					color: $gray-900;
				}
			}
		}
	}

	&.dark {
		background-color: $dark;

		#footer-social-menu li {

			&:hover img {
				filter: brightness(1.4);
			}
		}

		.footer-menu li {

			a {
				color: $gray-300;

				&:hover {
					color: $white;
				}
			}
		}
	}
}

